Fix blockquote overflow when in mobile viewport width. Add large quote marks for customer testomonial with emphases semantic on the block quote.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --sub-heading-font-size: calc(1.6rem + 1vw);
     --p-font-size: calc(0.5rem + 1vw);
 --dark-font-color: rgB(16	23	40);
-
+--high-opacity: 0.8;
 }
 
 * {
@@ -78,17 +78,6 @@ a {
     
 }
 
-/* .section-1-container {
-    position: relative;
-    height: 80vh;;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center ;
-    flex: 0;
-    border: 5px solid pink;
-} */
-
 .section-1-container {
     width: 100%;
     height: 80vh;
@@ -148,6 +137,7 @@ object-position: center;
 .bg-content .sub-heading+p {
 color: white;
 font-size: calc(0.5rem + 2vw);
+
 } 
 
 .section-2-container {
@@ -203,7 +193,7 @@ font-size: var(--sub-heading-font-size);
 .section-2-container .sub-heading+p {
 color: var(--dark-font-color);
     font-size: var(--p-font-size);
-    
+opacity: var(--high-opacity);
     } 
 
 
@@ -234,6 +224,7 @@ align-items: flex-start;
 
 .section-3-content-container .paragraph {
 font-size: var(--p-font-size);
+opacity: var(--high-opacity);
 }
 .section-3-image-container {
     position: relative;
@@ -269,9 +260,6 @@ row-gap: 100px;
     .section-4-container .heading {
         font-size: var(--sub-heading-font-size);
     }
-
-
-
 
 .card-container {
     position: relative;
@@ -330,6 +318,7 @@ font-size: var(--p-font-size);
 max-width: 45ch;
 text-align: center;
 padding: 5px 40px ;
+opacity: var(--high-opacity);
 }
 
 .ecommerce-container     {
@@ -369,34 +358,56 @@ margin-bottom: 100px;
 
 
 .section-5-container {
-    height: 600px;
+    height: auto;
     background-color: white;
     color: rgB(16	23	40);	
     display: flex;
     justify-content: center;
     align-items: center;
+
     
 }
 
 .quote-container {
+    padding-top: calc(5vw + 20px);
     padding-left: calc(5vw + 20px);
     padding-right: calc(5vw + 20px);
+    padding-bottom: calc(5vw + 20px);
+    height: 100%;
+    
 }
 
 .quote-container blockquote {
     color: var(--dark-font-color);
     font-size: calc(1.3rem + 1.6vw);
 width: 35ch;
+
+margin: 15px;
 display: inline;
 line-height: 1;
+box-shadow: 0 4px 6px rgba(0,0, 0, 0.1);
 
 }
+ 
 .quote-container footer {
-color: var(--dark-font-color);
+color: rgb(245, 94, 77);
 text-align: right;
 position: relative;
-top: 50px;
-right: 200px;
+top: 25px;
+right: 100px;
+margin-bottom: 100px;
+
+}
+
+blockquote span {
+    color: salmon;
+    font-size: 150px;
+}
+blockquote span.closing{
+color: blue;
+text-align: right;
+position: relative;
+left: 80%;
 
 
 }
